fix overlap

--- a/new-vector-tests.user.css
+++ b/new-vector-tests.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 tests
 @namespace   StylishThemes
-@version     1.0.26
+@version     1.0.27
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-tests.user.css
 @license     CC-BY-SA-4.0
@@ -129,6 +129,10 @@ html {
 }
 #ca-talk.new a {
   background-color: #f77f7f !important;
+}
+  
+#p-views {
+  max-height: 25px
 }
 
 #ca-addsection {
